fix RS size and positioning layout issues

--- a/node/mods/redsquare/web/css/redsquare-saito.css
+++ b/node/mods/redsquare/web/css/redsquare-saito.css
@@ -1,8 +1,8 @@
-
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.6rem;
   line-height: 1.33;
   color: #e1e8ed;
@@ -12,11 +12,11 @@ html, body {
 #saito-container {
   display: flex;
   flex-direction: row;
-  min-height: 100vh;
   margin: 0 auto;
   background-color: #15202b;
-  position: relative; 
+  position: relative;
   column-gap: unset;
+  overflow: hidden;
 }
 
 .saito-sidebar {
@@ -35,7 +35,6 @@ html, body {
   padding: 12px 12px;
   background-color: #000;
   color: #e7e9ea;
-  height: 100vh;
   box-sizing: border-box;
   font-family: system-ui, sans-serif;
 }
@@ -62,7 +61,6 @@ html, body {
 }
 
 @media (max-width: 1199px) {
-
   .saito-sidebar.left {
     width: 80px;
   }
@@ -78,7 +76,6 @@ html, body {
 }
 
 @media (max-width: 768px) {
-
   .saito-main {
     padding-left: 0px;
   }
@@ -95,4 +92,3 @@ html, body {
     max-width: 100%;
   }
 }
-
